# napari-tiled

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
src/napari_tiled_browser/: config.py  config.yaml  napari.yaml  tiled_widget.py  tiled_widget2.py
src/napari_tiled_browser/_tests/: test_widget.py
src/napari_tiled_browser/models/: search.py  tiled_selector.py  tiled_subscriber.py  tiled_worker.py
src/napari_tiled_browser/qt/: matplotlib_widget.py  search.py  tiled_login.py  tiled_search.py  tiled_widget.py
